fix: incorrect horizontal scrollbar width

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -87,6 +87,7 @@ img {
 *::-webkit-scrollbar {
   display: block;
   width: 0.3em;
+  height: 0.3em;
   background-color: transparent;
 }
 
